--- a/languages/Escapade.pot
+++ b/languages/Escapade.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Escapade 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-07-28 19:05-0400\n"
+"POT-Creation-Date: 2016-07-28 21:13-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -37,48 +37,39 @@ msgstr ""
 msgid "Secondary Font"
 msgstr ""
 
-#: functions.php:221
-msgid "Header Background Color"
-msgstr ""
-
-#: functions.php:231
+#: functions.php:212
 msgid "Link Color"
 msgstr ""
 
-#: functions.php:249
-msgid "Main Text Color"
+#: functions.php:227
+msgid "Text Color"
 msgstr ""
 
-#: functions.php:259
-msgid "Secondary Text Color"
+#: functions.php:240
+msgid "Call to Action Color"
 msgstr ""
 
-#: functions.php:269
-msgid "Button Color"
+#: functions.php:250
+msgid "Widget Background"
 msgstr ""
 
-#: functions.php:279
-msgid "Widget Text Color"
-msgstr ""
-
-#: functions.php:289
-msgid "Widget Background Color"
-msgstr ""
-
-#: functions.php:299
-msgid "Footer Text Color"
-msgstr ""
-
-#: functions.php:309
-msgid "Footer Background Color"
-msgstr ""
-
-#: functions.php:324
-msgid "Sepia"
+#: functions.php:267
+msgid "Negative"
 msgstr ""
 
 #: header.php:56
 msgid "Skip to content"
+msgstr ""
+
+#. //developer.wordpress.org/themes/basics/template-hierarchy/#search-result
+#. *
+#. * @package Primer
+#. * @since 1.0.0
+#.
+#: search.php:21
+#, php-format
+msgctxt "search term"
+msgid "Results for \"%s\""
 msgstr ""
 
 #: templates/parts/loop/page-content.php:17
